# pystrobe

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: __init__.py  component.py  component_view.py  scene.py
ui/: zoom_graphics_view.py
ui/main_window/: actions.py  main_window.py  menu_bar.py  menus.py
utils/: __init__.py  action_builder.py  action_factory.py  decorators.py
